--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="notes_hint">Enter reminder notes.</string>
     <string name="due_date_hint">Enter a due date.</string>
     <string name="checkbox_description">This checkbox represents if a reminder is completed.</string>
+    <string name="new_reminder">New Reminder</string>
 </resources>
