--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="due_date_hint">Enter a due date.</string>
     <string name="checkbox_description">This checkbox represents if a reminder is completed.</string>
     <string name="new_reminder">New Reminder</string>
+    <string name="notes">Reminder Notes</string>
+    <string name="location">Reminder Location</string>
+    <string name="due_date">Reminder Due Date</string>
+    <string name="title">Reminder Title</string>
 </resources>
