--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ProjectTwo</string>
+    <string name="app_name">Reminders</string>
     <string name="reminder_hint">Enter a reminder.</string>
     <string name="reminder_completed_label">Completed</string>
     <string name="location_hint">Enter a location.</string>
